--- a/DeepTrace/Shared/NavMenu.razor
+++ b/DeepTrace/Shared/NavMenu.razor
@@ -1,5 +1,8 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
-    <MudNavLink Href="/fetchdata" Match="NavLinkMatch.Prefix">Prometheus</MudNavLink>
-    <MudNavLink Href="/about"  Match="NavLinkMatch.Prefix">About</MudNavLink>
+    <MudNavLink Href="/datasources" Match="NavLinkMatch.Prefix">Data sources</MudNavLink>
+    <MudNavLink Href="/training"  Match="NavLinkMatch.Prefix">Training</MudNavLink>
+
+    <MudSpacer/>
+    <MudNavLink Href="/about" Match="NavLinkMatch.Prefix">About</MudNavLink>
 </MudNavMenu>
