--- a/DeepTrace/Shared/MainLayout.razor
+++ b/DeepTrace/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
     <MudAppBar Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="MudBlazor.Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudText Typo="Typo.h5" Class="ml-3">
-            ML Test UI
+            DeepTrace
         </MudText>
         <MudSpacer />
         @*<MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="MudBlazor.Color.Inherit" Edge="Edge.End" />*@
