DEEP-17 Layout for Training page created. Pages renamed.

--- a/DeepTrace/Pages/DataSources.razor
+++ b/DeepTrace/Pages/DataSources.razor
@@ -12,7 +12,7 @@
 @inject PrometheusClient Prometheus
 @inject IDialogService DialogService
 
-<PageTitle>Prometheus</PageTitle>
+<PageTitle>DataSources</PageTitle>
 
 <style>
     .graph {
@@ -21,7 +21,7 @@
     }
 </style>
 
-<h1>Prometheus</h1>
+<h1>DataSources</h1>
 
 <MudGrid Justify="Justify.FlexStart">
     <MudItem xs="12" sm="6" md="6" lg="3">
